--- a/Project 8/project 8.html
+++ b/Project 8/project 8.html
@@ -4,140 +4,168 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Website</title>
+    <title>Javascrit Documentation</title>
     <link rel="stylesheet" href="project 8.css">
 </head>
 
 <body>
     <header>
         <nav>
-            <h1>GreatZone</h1>
+            <h1>Javascrit Documentation</h1>
             <ul>
-                <a href="post.html"> <li>Home</li></a>
-               
-                <li>Post</li>
+                <a href="#introduction">
+                    <li>Introduction</li>
+                </a>
+                <a href="#what_you_should_already_know">
+                    <li>What you should already know</li>
+                </a>
+                <a href="#javaScript_and_java">
+                    <li>JavaScript and Java</li>
+                </a>
+                <a href="#hello_world">
+                    <li>Hello world</li>
+                </a>
+                <a href="#variables">
+                    <li>Variables</li>
+                </a>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section id="hero">
-            <div class="hero_content">
-                <h1>Make Zone <br>Better !</h1>
-                <p>Why Better Zone Important ?</p>
-            </div>
-            <div class="hero_image">
-                <img src="images/hero.png" alt="hero" />
-            </div>
+        <section id="introduction">
+            <h2>Introduction</h2>
+            <article>
+                <p>
+                    JavaScript is a cross-platform, object-oriented scripting language.
+                    It is a small and lightweight language. Inside a host environment
+                    (for example, a web browser), JavaScript can be connected to the
+                    objects of its environment to provide programmatic control over
+                    them.
+                </p>
+
+                <p>
+                    JavaScript contains a standard library of objects, such as Array,
+                    Date, and Math, and a core set of language elements such as
+                    operators, control structures, and statements. Core JavaScript can
+                    be extended for a variety of purposes by supplementing it with
+                    additional objects; for example:
+                </p>
+
+                <ul>
+                    <li>Client-side JavaScript extends the core language by supplying
+                        objects to control a browser and its Document Object Model (DOM).
+                        For example, client-side extensions allow an application to place
+                        elements on an HTML form and respond to user events such as mouse
+                        clicks, form input, and page navigation.
+                    </li>
+
+                    <li>
+                        Server-side JavaScript extends the core language by supplying
+                        objects relevant to running JavaScript on a server. For example,
+                        server-side extensions allow an application to communicate with a
+                        database, provide continuity of information from one invocation to
+                        another of the application, or perform file manipulations on a
+                        server.
+                    </li>
+                </ul>
+            </article>
         </section>
-        <div class="h-card">
-            <div class="crad-content">
-                <h2>Long established</h2>
+        <section id="what_you_should_already_know">
+            <h2>What you should already know</h2>
+            <article>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit et quia rerum fuga ut voluptatem
-                    exercitationem vel aut quaerat sit illo nostrum, est mollitia iure praesentium nam modi? Quae, qui?
+                    This assume you have the following basic background:
                 </p>
-                <div class="satuts">
-                    <div class="date">30 may 2024</div>
-                    <a href="post.html"><button class="btn">Read More...</button></a>
-                </div>
+                <ul>
+                    <li>
+                        A general understanding of the Internet and the World Wide Web (WWW).
+                    </li>
+                    <li>
+                        Good working knowledge of HyperText Markup Language (HTML).
+                    </li>
+                    <li>
+                        Some programing experience. If you are new to programing, try
+                        one of the tutorials linked on the main page JavaScript.
+                    </li>
+                </ul>
+            </article>
+        </section>
 
-            </div>
-            <div class="long-image">
-                <img src="images/long-card.png" alt="long image">
-            </div>
-        </div>
-        <div class="card_conatainer">
-            <div class="card_warrper">
-                <div class="v-card">
-                    <div class="crad-content">
-                        <h2>Long established</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit et quia rerum fuga ut
-                            voluptatem
-                            exercitationem vel aut quaerat sit illo nostrum, est mollitia iure praesentium nam modi?
-                            Quae, qui?
-                        </p>
-                        <div class="satuts">
-                            <div class="date">30 may 2024</div>
-                            <a href="post.html"><button class="btn">Read More...</button></a>
-                        </div>
-
-                    </div>
-                    <div class="long-image">
-                        <img src="images/card1.png" alt="card1">
-                    </div>
-                </div>
-            </div>
-
-            <div class="card_warrper">
-                <div class="v-card">
-                    <div class="crad-content">
-                        <h2>Long established</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit et quia rerum fuga ut
-                            voluptatem
-                            exercitationem vel aut quaerat sit illo nostrum, est mollitia iure praesentium nam modi?
-                            Quae, qui?
-                        </p>
-                        <div class="satuts">
-                            <div class="date">30 may 2024</div>
-                            <a href="post.html"><button class="btn">Read More...</button></a>
-                        </div>
-
-                    </div>
-                    <div class="long-image">
-                        <img src="images/card2.png" alt="card2">
-                    </div>
-                </div>
-            </div>
-            <div class="card_warrper">
-                <div class="v-card">
-                    <div class="crad-content">
-                        <h2>Long established</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit et quia rerum fuga ut
-                            voluptatem
-                            exercitationem vel aut quaerat sit illo nostrum, est mollitia iure praesentium nam modi?
-                            Quae, qui?
-                        </p>
-                        <div class="satuts">
-                            <div class="date">30 may 2024</div>
-                            <a href="post.html"><button class="btn">Read More...</button></a>
-                        </div>
-
-                    </div>
-                    <div class="long-image">
-                        <img src="images/card3.png" alt="card3">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="h-card">
-            <div class="crad-content">
-                <h2>What is Lorem Ipsum ? </h2>
+        <section id="javaScript_and_java">
+            <h2>JavaScript and Java</h2>
+            <article>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit et quia rerum fuga ut voluptatem
-                    exercitationem vel aut quaerat sit illo nostrum, est mollitia iure praesentium nam modi? Quae, qui?
+                    JavaScript and Java are similar in some ways but fundamentally
+                    different in some others. The JavaScript language resembles Java but
+                    does not have Java's static typing and strong type checking.
+                    JavaScript follows most Java expression syntax, naming conventions
+                    and basic control-flow constructs which was the reason why it was
+                    renamed from LiveScript to JavaScript.
                 </p>
-                <div class="satuts">
-                    <div class="date">30 may 2024</div>
-                    <a href="post.html"><button class="btn">Read More...</button></a>
-                </div>
 
-            </div>
-            <div class="long-image">
-                <img src="images/long-big-card.png" alt="long-big-image">
-            </div>
-        </div>
+                <p>
+                    In contrast to Java's compile-time system of classes built by
+                    declarations, JavaScript supports a runtime system based on a small
+                    number of data types representing numeric, Boolean, and string
+                    values. JavaScript has a prototype-based object model instead of the
+                    more common class-based object model. The prototype-based model
+                    provides dynamic inheritance; that is, what is inherited can vary
+                    for individual objects. JavaScript also supports functions without
+                    any special declarative requirements. Functions can be properties of
+                    objects, executing as loosely typed methods.
+                </p>
+
+                <p>
+                    JavaScript is a very free-form language compared to Java. You do not
+                    have to declare all variables, classes, and methods. You do not have
+                    to be concerned with whether methods are public, private, or
+                    protected, and you do not have to implement interfaces. Variables,
+                    parameters, and function return types are not explicitly typed.
+                </p>
+            </article>
+        </section>
+        <section id="hello_world">
+            <h2>Hello world</h2>
+            <article>
+                To get started with writing JavaScript, open the Scratchpad and write
+                your first "Hello world" JavaScript code: <br>
+
+                <code>
+                    >function greetMe(yourName) { alert("Hello " + yourName); }
+                     greetMe("World");
+                </code> <br>
+                Select the code in the pad and hit Ctrl+R to watch it unfold in your
+                browser!
+            </article>
+        </section>
+
+        <section id="variables">
+            <h2>Variables</h2>
+            <article>
+                <p>
+                    You use variables as symbolic names for values in your application.
+                    The names of variables, called identifiers, conform to certain
+                    rules.
+                </p>
+                <p>
+
+                    A JavaScript identifier must start with a letter, underscore (_), or
+                    dollar sign ($); subsequent characters can also be digits (0-9).
+                    Because JavaScript is case sensitive, letters include the characters
+                    "A" through "Z" (uppercase) and the characters "a" through "z"
+                    (lowercase).
+                </p>
+                <p>
+                    You can use ISO 8859-1 or Unicode letters such as å and ü in
+                    identifiers. You can also use the Unicode escape sequences as
+                    characters in identifiers. Some examples of legal names are
+                    Number_hits, temp99, and _name.
+                </p>
+            </article>
+
+        </section>
     </main>
-      <hr>
-    <footer>
-        <p>
-            GreatZone 2024 Copyright all right reserved
-        </p>
-    </footer>
 
 </body>
 
